--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /src/build-echoServer-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/
-/.vscode
+# /.vscode
+src/server/release/
+src/server/debug/
+src/server/.qmake.stash
+src/server/Makefile*
