--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,9 @@ version: "1"
 services:
     postgres:
         image: postgres:latest
-        restart: always
+        restart: on-failure
+        ports:
+            - 5433:5432
         environment:
             POSTGRES_USER: zlplib
             POSTGRES_PASSWORD: zlplibpass
@@ -12,6 +14,7 @@ services:
 
     pgadmin:
         image: dpage/pgadmin4:latest
+        restart: on-failure
         environment:
             PGADMIN_DEFAULT_EMAIL: ranhummer@gmail.com
             PGADMIN_DEFAULT_PASSWORD: zlplibpass
@@ -26,6 +29,7 @@ services:
     server:
         build:
             context: ./src/server
+        restart: on-failure
         volumes:
             - server:/server
         ports:
