WIP server mvp, need to test/finish, db update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,8 @@
 		"future": "cpp",
 		"variant": "cpp",
 		"xstring": "cpp",
-		"string": "cpp"
+		"string": "cpp",
+		"xutility": "cpp"
 	},
 	"cmake.configureOnOpen": true
 
