--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -10,4 +10,6 @@ COPY *.pro /server
 COPY *.json /server
 
 RUN qmake && make
+# strip comments from json for more efficient parsing on the server without js engine
+RUN sed -i -e '/^\/\//d' -e 's@\(.*\)[[:blank:]]\{1,\}//.*@\1@' api.json
 ENTRYPOINT [ "/server/echoServer" ]
