feat: add sorting books on desk, check invites, unit test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,8 @@
 		"xstring": "cpp",
 		"string": "cpp",
 		"xutility": "cpp",
-		"xmemory": "cpp"
+		"xmemory": "cpp",
+		"vector": "cpp"
 	},
 	"cmake.configureOnOpen": true
 
